Update publish.yml test
trying to fix shit

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,8 @@ name: Publish
 
 on:
   workflow_dispatch:
-  #schedule: #Reserve edit
-  #  - cron: '0 10 * * *'
+  schedule: #Reserve edit
+    - cron: '0 10 * * *'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
